# py_project_django

./: .gitignore  README.md  category.json  index.html  index1.html  product.json  pyproject.toml  test.html  web_application.py  website_catalog.html  website_contacts.html  website_main.html  website_order.html
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  template.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_objects.py
catalog/migrations/: 0001_initial.py  0002_product.py  0003_alter_product_png.py  0004_alter_category_description_alter_product_created_at_and_more.py  0005_alter_product_category.py  0006_product_views_counter_alter_product_category_and_more.py  0007_alter_product_created_at_alter_product_updated_at.py  0008_alter_category_description_alter_category_name_and_more.py  0009_alter_product_options.py  0010_product_owner_product_publication_status.py
catalog/templates/: contacts.html
catalog/templates/catalog/: catalog.html  category_detail.html  category_form.html  category_list.html  category_products.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  (+1 more)
config/: settings.py  urls.py
idiots/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
idiots/migrations/: 0001_initial.py  0002_remove_idiots_phone_idiots_country_and_more.py
idiots/templates/: login.html
(+4 files in other folders)
