[tool.poetry]
name = "py-project-django"
version = "0.1.0"
description = ""
authors = ["Admin <alexander_kozhanov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.3"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
pillow = "^11.2.1"
ipython = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
